[package]
name = "batchy3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.9"
getrandom = "0.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
roxmltree = "0.14"
rust-s3 = "0.28"
time = { version = "0.3", features = ["formatting", "parsing"] }
zstd = "0.9"

